test/parser/assignment/invalid_pattern_assignment_op_error1.exp
Error: Invalid left hand side of assignment
test/parser/assignment/invalid_pattern_assignment_op_error1.myte:4:2-8
 4 |   (x, y) += 1;
   |   ^^^^^^