test/parser/assignment/invalid_pattern_assignment_op_error1.myte
module test

fun test() {
  (x, y) += 1;
}